fix(路径处理): 改进跨平台文件路径兼容性 (#23)
* fix(路径处理): 改进跨平台文件路径兼容性

修改文件路径处理逻辑以支持非Windows系统：
1. 添加路径分隔符替换逻辑，在非Windows系统下将反斜杠替换为正斜杠
2. 使用os.path.normpath规范化路径后再进行JSON键的存储
3. 添加注释说明跨平台兼容性注意事项

* ci(mac): 更新 macOS 构建流程

- 调整 Python 设置和代码检出的顺序
- 移除 Xcode 配置步骤
- 添加设置 release channel 为 nightly 的步骤
- 更新构建名称为 "Create macOS app bundle"
- 删除上传步骤的引用

* ci(mac): 调整 Python 设置位置

- 将设置 Python 3.10 版本的操作移到手动同步 zed 源代码之前
- 移除多余的设置 Python 3.10 版本操作
- 保留替换操作和 Cmake 安装操作的位置

* ci(mac): 调整 GitHub Actions 工作流

- 移除手动同步 zed 源代码步骤的多余名称
- 解除 Xcode 步骤的注释并添加缺失的步骤名称

* build(mac): 更新 macOS 构建工作流

- 移除 Xcode 和 Cmake 相关步骤
- 将替换操作移至 zed 目录下执行
- 注释掉 Xcode 和 Cmake 相关步骤

* ci(mac): 简化 Mac 工作流文件

- 移除了多余的空行和注释
- 删除了不必要的操作步骤
- 优化了代码结构，提高了可读性

* ci(mac): 优化 macOS 构建流程

- 调整代码检出和替换操作的顺序
- 移除设置发布通道和创建 macOS app bundle 的注释
- 简化构建和上传 nightly 版本的步骤

* refactor: 添加 nightly 发布渠道设置

* ci(mac): 更新发布版本到 nightly 通道的脚本

- 在发布版本时添加了进入 zed 目录的步骤

* ci(mac): 更新 GitHub Actions 依赖版本

- 使用特定提交版本的 actions/checkout
- 注释掉原有的 v4 版本引用
- 替换为 11bd71901bbe5b1630ceea73d27597364c9af683 版本

* 创建 move

* 修正

* ci(mac): 修复 GitHub Actions 中的 zed 源代码同步步骤

- 移除了多余的注释行
- 优化了 YAML 文件的格式

---------

Co-authored-by: lsmir2 <lsmir2@qq.com>
Co-authored-by: 陈生杂物房 <88823709+TC999@users.noreply.github.com>

--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -1,11 +1,11 @@
 name: MacOS 编译
 on:
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   bundle-mac:
     timeout-minutes: 60
-    name: Create a macOS bundle
+    name: macOS 编译
     runs-on: macos-latest
     env:
       CARGO_TERM_COLOR: always
@@ -21,27 +21,42 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: 手动同步 zed 源代码
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
         with:
           repository: zed-industries/zed
           ref: main
           path: zed
-          
+
       - name: 替换
         run: python3 replace.py
 
-      - name: Xcode
-        run: |
-          sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
-          sudo xcodebuild -license accept
+      # - name: Xcode
+      #   run: |
+      #     sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
+      #     sudo xcodebuild -license accept
+      # - name: Cmake
+      #   run: brew install cmake
 
-      - name: Cmake
-        run: brew install cmake
+      # - name: Set release channel to nightly
+      #   run: |
+      #     cd zed
+      #     set -eu
+      #     version=$(git rev-parse --short HEAD)
+      #     echo "Publishing version: ${version} on release channel nightly"
+      #     echo "nightly" > crates/zed/RELEASE_CHANNEL
 
-      - name: 编译包
+      - name: 编译
         run: cd zed && script/bundle-mac
 
-      - name: Upload Zed Nightly
-        run: cd zed && script/upload-nightly macos
+      - name: 移动文件
+        run: move macos
+
+      - name: 上传
+        uses: actions/upload-artifact@v4
+        with:
+          file: |
+            Zed-aarch64.dmg
+            Zed-x86_64.dmg
+            zed-remote-server-*.gz
