--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -110,6 +110,9 @@ jobs:
       - name: 限制目标目录大小
         run: zed/script/clear-target-dir-if-larger-than 100
 
+      - name: 安装 X11 与 pkg-config 依赖
+        run: sudo apt-get update && sudo apt-get install -y pkg-config libx11-dev
+
       - name: 创建 Linux .tar.gz 包
         run: cd zed && script/bundle-linux
 
@@ -166,6 +169,9 @@ jobs:
 
       - name: 限制目标目录大小
         run: zed/script/clear-target-dir-if-larger-than 100
+
+      - name: 安装 X11 与 pkg-config 依赖
+        run: sudo apt-get update && sudo apt-get install -y pkg-config libx11-dev
 
       - name: 创建 Linux .tar.gz 包
         run: cd zed && script/bundle-linux
