--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,7 +96,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: zed-industries/zed
-          ref: main
+          ref: ${{ inputs.branch }}
           path: zed
       - name: 替换
         run: python3 replace.py
@@ -156,7 +156,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: zed-industries/zed
-          ref: main
+          ref: ${{ inputs.branch }}
           path: zed
       - name: 替换
         run: python3 replace.py
