--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -189,7 +189,7 @@ jobs:
           path: zed-linux-arm64.tar.gz
 
       - name: 移动
-        run: mv zed-preview.app deb-arm/usr
+        run: mv zed*.app deb-arm/usr
 
       - name: 权限修复
         run: chmod 775 deb-arm -R
