--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -104,6 +104,11 @@ jobs:
       - name: 将 Rust 添加到 PATH
         run: echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
+      - name: 同步版本号到 control 文件
+        run: |
+          VERSION=$(grep '^version *= *"' zed/cargo.toml | head -n1 | sed -E 's/version *= *"([^"]+)"/\1/')
+          sed -i "s/^Version: .*/Version: $VERSION/" deb/DEBIAN/control
+
       - name: 安装 Linux 依赖项
         run: ./zed/script/linux && ./zed/script/install-mold 2.34.0
 
@@ -163,6 +168,11 @@ jobs:
           path: zed
       - name: 替换
         run: python3 replace.py
+
+      - name: 同步版本号到 control 文件
+        run: |
+          VERSION=$(grep '^version *= *"' zed/cargo.toml | head -n1 | sed -E 's/version *= *"([^"]+)"/\1/')
+          sed -i "s/^Version: .*/Version: $VERSION/" deb-arm/DEBIAN/control
 
       - name: 安装 Linux 依赖项
         run: ./zed/script/linux
