更新删除列表

--- a/del.yaml
+++ b/del.yaml
@@ -24,6 +24,7 @@ global: # 全局规则，对所有文件生效
   - "zed"
   - "⋯"
   - "Bearer {}"
+  - "foo"
 "zed/crates/activity_indicator/src/activity_indicator.rs":
   - " ({}%)"
   - "arrow-circle"
