--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -167,6 +167,9 @@ jobs:
       - name: 安装 Linux 依赖项
         run: ./zed/script/linux
 
+      - name: Setup Sentry CLI
+        uses: matbour/setup-sentry-cli@3e938c54b3018bdd019973689ef984e033b0454b
+
       - name: 限制目标目录大小
         run: zed/script/clear-target-dir-if-larger-than 100
 
